Убраны ненужные UserRole.java и SystemRole.java